[package]
name = "edwards_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
data-encoding = "2.3.3"
ed25519-dalek = "1.0.1"
hyper = "0.14.26"
mime_guess = "2.0.4"
rand = "0.7"
tokio = { version = "1", features = ["macros","rt","rt-multi-thread"] }
