[package]
name = "wasm_dalek"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
ed25519-dalek = "1.0.1"
getrandom = { version = "0.2.9", features = ["js"] }
rand = "0.7"
rand_core = "0.5"
wasm-bindgen = "0.2.82"

[dependencies.web-sys]
version = "0.3.61"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'Crypto',
    'console'

]
[profile.release]
debug = true
